--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -8,7 +8,7 @@
   --color-light-secondary: #f2f2f2;
   --color-light-tertiary: #fafafa;
   --color-mid: #e3e3e3;
-  --color-on: #e18335;
+  --color-on: #D57120;
   --color-no: #a21309;
   --color-changed: #ffffa7;
   --color-ok: #0b6f50;
