--- a/public/css/elements/_drawer.css
+++ b/public/css/elements/_drawer.css
@@ -57,7 +57,7 @@
 
     & > :nth-child(1) {
       overflow: hidden;
-      white-space: nowrap;
+      white-space: normal;
       text-overflow: ellipsis;
     }
 
