--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -11,7 +11,7 @@
   --color-light-secondary: #f2f2f2;
   --color-light-tertiary: #fafafa;
   --color-mid: #e3e3e3;
-  --color-on: #D57120;
+  --color-on: #d57120;
   --color-no: #a21309;
   --color-changed: #ffffa7;
   --color-ok: #0b6f50;
@@ -1571,7 +1571,7 @@ dialog {
     }
     & > :nth-child(1) {
       overflow: hidden;
-      white-space: nowrap;
+      white-space: normal;
       text-overflow: ellipsis;
     }
     & > :nth-child(2) {
