--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -31,23 +31,13 @@ body {
   color: var(--color-font-contrast);
   background-color: var(--color-primary);
 }
-.light-background {
-  background-color: var(--color-base-tertiary);
-}
-.light-colour {
-  color: var(--color-base-tertiary);
-}
 .off-black {
   color: var(--color-font);
-}
-.off-black-background {
-  color: var(--color-base-tertiary);
-  background-color: var(--color-font);
 }
 .on-colour {
   color: var(--color-active);
 }
-.no-colour {
+.danger {
   color: var(--color-danger);
 }
 
