on-colour class removed.
Eradicated .on class which was used in 2 cases and was impossible to find.
Now:
on for display toggle is toggle-on
on for location edit is edit-toggle-on

In plugins used only once and not in line with new colour scheme.

--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -10,11 +10,6 @@
     color: var(--color-active);
   }
 
-  &.on-colour,
-  &.on {
-    color: var(--color-active);
-  }
-
   &.danger {
     color: var(--color-danger);
   }
@@ -38,7 +33,7 @@
     content: 'toggle_off';
   }
 
-  &.on::after {
+  &.toggle-on::after {
     content: 'toggle_on';
     color: var(--color-active);
   }
