--- a/public/css/layout/_locationview.css
+++ b/public/css/layout/_locationview.css
@@ -2,6 +2,10 @@
   margin-top: 5px;
   border-radius: 5px;
   background-color: var(--color-base-tertiary);
+
+  .edit-toggle-on {
+    color: var(--color-active);
+  }
 }
 
 .location-view-grid {
