--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -21,13 +21,10 @@ body {
   transition: 0.2s ease-in-out;
   transition-property: background-color;
 }
-.off-black {
-  color: var(--color-font);
-}
 .active {
   color: var(--color-active);
 }
-.danger {
+.color-danger {
   color: var(--color-danger);
 }
 
