--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -6,6 +6,7 @@
   border: 1px solid var(--color-border);
   border-radius: 3px;
   isolation: isolate;
+  z-index: 5;
 
   &:disabled {
     pointer-events: none;
