--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -672,6 +672,7 @@ dialog {
   border: 1px solid var(--color-border);
   border-radius: 3px;
   isolation: isolate;
+  z-index: 5;
   &:disabled {
     pointer-events: none;
     opacity: 0.4;
@@ -838,6 +839,7 @@ dialog {
   grid-template-columns: 50% 50%;
   position: relative;
   width: 100%;
+  z-index: auto;
   & .label-row {
     grid-row: 1;
     grid-column: 1 / 3;
