.info renamed to .color-info.
Color classes in _colours can be applied to text within framework components but they can't override material symbol colour therefore we need them in both stylesheets.

--- a/public/css/base/_colours.css
+++ b/public/css/base/_colours.css
@@ -35,10 +35,19 @@ body {
   transition-property: background-color;
 }
 
+
 .active {
   color: var(--color-active);
 }
 
 .color-danger {
   color: var(--color-danger);
+}
+
+.color-info {
+  color: var(--color-info);
+}
+
+.color-font-mid {
+  color: var(--color-font-mid);
 }
