--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -30,6 +30,12 @@ body {
 .color-danger {
   color: var(--color-danger);
 }
+.color-info {
+  color: var(--color-info);
+}
+.color-font-mid {
+  color: var(--color-font-mid);
+}
 
 /* public/css/base/_common.css */
 .display-none {
@@ -289,10 +295,13 @@ input[type=search]::-webkit-search-cancel-button:hover {
   &.active {
     color: var(--color-active);
   }
-  &.info {
+  &.color-info {
     color: var(--color-info);
   }
-  &.primary-light-colour {
+  &.color-danger {
+    color: var(--color-danger);
+  }
+  &.color-font-mid {
     color: var(--color-font-mid);
   }
   &.close:after {
