--- a/public/css/elements/_toolbar.css
+++ b/public/css/elements/_toolbar.css
@@ -2,10 +2,13 @@
   position: fixed;
   top: 0.5em;
   right: 0.5em;
-  z-index: 1;
-  opacity: 0.95;
 
-  & > ul li {
-    position: relative;
+  ul {
+    display: flex;
+    flex-direction: column;
+
+    li {
+        position: relative;
+    }
   }
 }
