--- a/public/css/elements/_toolbar.css
+++ b/public/css/elements/_toolbar.css
@@ -2,13 +2,19 @@
   position: fixed;
   top: 0.5em;
   right: 0.5em;
+  z-index: 1;
+  opacity: 0.95;
+  background-color: #ffff;
+  margin: 0.5%;
+  border-radius: 5%;
+  padding: 0.5%;
 
   ul {
     display: flex;
     flex-direction: column;
 
     li {
-        position: relative;
+      position: relative;
     }
   }
 }
