--- a/public/css/elements/_toolbar.css
+++ b/public/css/elements/_toolbar.css
@@ -4,17 +4,33 @@
   right: 0.5em;
   z-index: 1;
   opacity: 0.95;
-  background-color: #ffff;
   margin: 0.5%;
   border-radius: 5%;
   padding: 0.5%;
 
-  ul {
-    display: flex;
-    flex-direction: column;
+  & > ul:first-of-type {
+    position: relative;
 
-    li {
-      position: relative;
+    &>li {
+      display: flex;
+      flex-direction: row-reverse;
+
+      .submenu{
+        display: flex;
+      }
     }
+
+  }
+
+  & > ul > li > button {
+    margin-bottom: 10px;
+    background-color: var(--color-base-tertiary);
+    box-shadow: 1px 1px 3px var(--color-base-tertiary);
+    border-radius: 50%;
+    opacity: 0.9;
+    padding: 5px;
+    width: 3em;
+    height: 3em;
+    text-align: center;
   }
 }
